# pen-assemble

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN_PROVENANCE.md  README.md  RESCORING_v0.1.2.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
catalog/release_v0.5.0/: README_CATALOG.md  STRUCTURES_NOTE.txt  all_designs.fasta  checksums.sha256  p1_beaters.fasta  p1_beaters_catalog.csv  p5_top5_catalog.csv  pen_assemble_catalog.csv  pen_assemble_catalog.parquet  top5_compliant.fasta
catalog/release_v0.5.0/browser/: index.html
catalog/release_v0.5.0/designs/: A0A0D6P4M1.json  A0A0F7JVI0.json  A0A0F7PDA2.json  A0A0F8GK79.json  A0A1M4WWW7.json  A0A1M4XP65.json  A0A1Y0D3M8.json  A0A271IYR4.json  A0A271J153.json  A0A285TNF7.json  A0A286DGT7.json  A0A2A2JWA1.json  A0A2N4UKD9.json  A0A2N5Y4G6.json  A0A2N6QQY8.json  A0A2N9XQN2.json  A0A2P2CD09.json  A0A2P5GGU1.json  A0A2P5GN80.json  A0A2P5TPU7.json  A0A2P8CFJ2.json  A0A2P8F7A0.json  A0A2P8R0S2.json  A0A2R4XH08.json  A0A2R8C271.json  A0A2S0MYY1.json  A0A2S0N038.json  A0A2S0N4K1.json  A0A2S0N622.json  A0A2S8F2Y9.json  A0A2S9GS81.json  A0A2S9T8F5.json  A0A2T0T4A9.json  A0A2T1A6Q4.json  A0A2T4HUY8.json  A0A2T5ZV47.json  A0A2T6A2Q0.json  A0A2T7FSN7.json  A0A2U0THY1.json  A0A2U2DJI8.json  (+989 more)
catalog/release_v0.5.0/validation/: P1_beat_is621_result.json  P2_cargo_deliv_result.json  P3_deimmunization_result.json  P4_orthologs_result.json  P5_diversity_result.json  all_predictions_summary.json  step20_failure_modes.json
catalog/release_v0.5.0/wetlab/: C_targeted_001.md  D006_IS621_ProtMPNN_T0.1_sample10.md  D008_IS621_ProtMPNN_T0.1_sample11.md  D010_IS621_ProtMPNN_T0.1_sample17.md  D011_IS621_ProtMPNN_T0.1_sample18.md  D016_IS621_ProtMPNN_T0.1_sample23.md  D020_IS621_ProtMPNN_T0.1_sample6.md  D022_IS621_ProtMPNN_T0.1_sample27.md  D023_IS621_ProtMPNN_T0.1_sample8.md  D024_IS621_ProtMPNN_T0.1_sample15.md  D025_IS621_ProtMPNN_T0.1_sample19.md  D026_IS621_ProtMPNN_T0.1_sample4.md  D030_IS621_ProtMPNN_T0.1_sample7.md  D7BKC8.md  D8PEA4.md  IS621_deimmunized_v2_Y255K_D41C_G65K_E187M_D27C_D203C_V285C_V152C_T224C_L318K_E87C_L193I_L275I_P177V.md  wetlab_index.md
data/: catalog_v0.5.1_current.parquet  catalog_v0.5.2_current.parquet  rescore_comparison_v010_v012.csv  rescore_summary_v012.json  rescore_summary_v052.json
designs/: scaffold_sequences.fasta  step12_active_site_plddt.csv  step12_active_site_summary.json  step12_esm_tier1_combined.fasta  step12_esm_tier1_manifest.json  step12_esmfold_done.json  step12_results.csv  step12_results.parquet  step12b_boltz1_tier2_input.fasta  step12b_boltz1_tier2_manifest.json
designs/discarded/: C_v1_discarded_wrong_wt_baseline.fasta
designs/strategy_A/: chimeric_designs.fasta  chimeric_designs.parquet  chimeric_designs_manifest.json
designs/strategy_B/: ortholog_candidates.fasta  ortholog_candidates.parquet  ortholog_candidates_gate_summary.json  ortholog_top1000_esm_tier1.fasta  ortholog_top1000_esm_tier1.parquet
designs/strategy_C/: DONE.txt  deimmunized_targeted.fasta  deimmunized_targeted.parquet  deimmunized_targeted_manifest.json  deimmunized_v2.fasta  deimmunized_v2.parquet  deimmunized_v2_manifest.json  deimmunized_variants.fasta  deimmunized_variants.parquet  deimmunized_variants_heuristic_mc.fasta  deimmunized_variants_heuristic_mc.parquet  deimmunized_variants_heuristic_mc_manifest.json  deimmunized_variants_manifest.json
designs/strategy_D/: strategy_D_designs.fasta  strategy_D_manifest.json
docs/: api.rst  changelog.rst  conf.py  deviations.rst  index.rst  methodology_notes.rst  predictions.rst  quickstart.rst
pen_assemble/: __init__.py  _version.py  api.py  catalog.py  cli.py  codon.py  pen_score.py
pen_assemble/data/: __init__.py  design_strategies.yaml  loader.py  pre_registration.yaml  scaffold_universe.yaml
pen_assemble/strategies/: __init__.py  backbone_redesign.py  deimmunization.py  domain_swap.py  ortholog_discovery.py
pen_assemble/triage/: __init__.py  diversity.py  multi_gate.py
pen_assemble/utils/: linker.py  mhc.py  pdb.py
pen_assemble/verification/: __init__.py  active_site.py  mechclass.py  penscore.py  stability.py  structure.py
pipeline_results/: pen_score_summary.json  task3b_all_d_immuno.json
pipeline_results/step13_stability/: stability_passed.parquet  stability_summary.json
pipeline_results/step15_mechclass/: mech_class_passed.parquet  mech_class_summary.json
pipeline_results/step16_penscore/: all_pen_scores.parquet  p1_candidates.parquet  pen_score_summary.json
scripts/: 14a_esm_wrapper.sh  14a_step12_esmfold_runner.py  14b_step12_active_site_plddt.py  15a_boltz1_wrapper.sh  15a_step12b_boltz1_runner.py  40_test_pred_P1_beat_is621.py  41_test_pred_P2_cargo_deliv.py  42_test_pred_P3_deimmunization.py  43_test_pred_P4_orthologs.py  44_test_pred_P5_diversity.py  45_summarise_predictions.py  50_assemble_catalog.py  51_build_browser.py  52_generate_wetlab_reference.py  _d_sequences.json  check_vm_and_upload.py  d_spot_check.fasta  rescore_v012.py  run_steps13_15_16.sh  upgrade_catalog_to_v052.py  upload_and_run.py
tests/: test_catalog.py  test_catalog_v052.py  test_codon.py  test_pen_score.py
validation/: retrospective_recovery_results.json
vm_source/: run_pipeline_direct.py  step12b_boltz1_runner.py  strategy_C_runner.py  strategy_C_targeted_runner.py  strategy_C_v2_runner.py  strategy_D_runner.py
vm_source/pen_assemble_pkg/pen_assemble/: __init__.py  cli.py
vm_source/pen_assemble_pkg/pen_assemble/data/: loader.py  pre_registration.yaml
vm_source/pen_assemble_pkg/pen_assemble/strategies/: deimmunization.py  domain_swap.py
vm_source/pen_assemble_pkg/pen_assemble/triage/: diversity.py  multi_gate.py
vm_source/pen_assemble_pkg/pen_assemble/utils/: __init__.py  mhc.py  pdb.py
vm_source/pen_assemble_pkg/pen_assemble/verification/: mechclass.py  penscore.py  structure.py
