[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pen-assemble"
version = "0.5.2"
description = "Programmable Enzyme Networks: automated pipeline for IS110-family bridge recombinase design and scoring"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Anees Ahmed", email = "ahmedaneesm@gmail.com" },
]
keywords = [
    "genome editing",
    "bridge recombinase",
    "IS110",
    "protein design",
    "pen-score",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Upstream PEN-STACK extras — pinned to the exact versions used in this paper.
# Do NOT relax these bounds without re-running the full pipeline and re-hashing
# the pre-registration file (pen_assemble/data/pre_registration.yaml).
# ---------------------------------------------------------------------------
atlas = [
    # Pinned to genome-atlas v0.6.0: Strategy B ortholog discovery was run
    # against the v0.6.0 atlas catalog (April 2026 snapshot, 10,000 proteins,
    # 18 Pfam families). v0.7.0 removes the SIMILAR_TO, HAS_RNA, and PART_OF
    # edge types (schema refactor) and adds 11 non-IS110 systems — neither
    # change affects IS110-family design outputs, but upgrading would create a
    # provenance inconsistency in the Zenodo deposit. Additionally, mech-class
    # v0.5.1 (below) is already pinned to atlas v0.6.0; a looser bound here
    # causes a transitive install conflict for pen-assemble[atlas,mech-class].
    "genome-atlas>=0.7.2,<0.8.0",
    "duckdb>=0.10.0",
]
mech-class = [
    # Pinned to mech-class v0.5.2: fixes the IS110 Tier-A OOD misclassification
    # (IS621 and novel IS110 proteins with no pre-computed ESM-2 embedding were
    # scored as DSB_NUCLEASE at P=0.567–0.703; v0.5.2 adds a hard gate that
    # returns DSB_FREE when PF01548∧PF02371 are both present). This corrects
    # IS621's own PenScore from 0.929→0.954 retroactively; PEN-ASSEMBLE designs
    # are unaffected (S_DSB=1.0 already via PFAM evidence, confidence=0.99).
    # v0.5.2 carries its own atlas v0.6.0 pin; pinning here makes the transitive
    # constraint explicit and prevents a conflict if the atlas extra is also installed.
    "mech-class>=0.5.4,<0.6.0",
]
pen-score = [
    # Pinned to pen-score v0.1.2: 8-axis PenScore with S_Energy axis added.
    # v0.1.0 (7-axis) scores are the pre-registration record (frozen in
    # data/catalog_v0.5.0_FROZEN.parquet; DO NOT modify). v0.1.2 re-scoring
    # produces the current best-estimate catalog (catalog_v0.5.1_current.parquet).
    # All IS110-family designs gain S_Energy=1.0; PenScore change ≈±0.002
    # (weight redistribution is nearly neutral for IS110 designs where
    # S_DSB=S_Cargo=S_Prog=S_Energy=1.0). IS621 lockpoint bumps 0.929→0.957.
    # Pre-registration P1 (≥5 designs beat 0.929) was tested against v0.1.0 and
    # is FINAL. v0.1.2 lockpoint (0.957) is reported as secondary analysis only.
    "pen-score>=0.1.3,<0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.25",
    "furo>=2024.1.29",
]

[project.urls]
Homepage      = "https://github.com/ahmedanees-m/pen-assemble"
Documentation = "https://ahmedanees-m.github.io/pen-assemble/"
Repository    = "https://github.com/ahmedanees-m/pen-assemble"
"Bug Tracker" = "https://github.com/ahmedanees-m/pen-assemble/issues"
Changelog     = "https://github.com/ahmedanees-m/pen-assemble/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pen_assemble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["pen_assemble"]
omit = [
    "tests/*",
    # Pipeline-only modules: require heavy VM-only deps (ESM-2, MHCflurry,
    # AlphaFold, mech-class extras). Not importable in CI without those extras.
    "pen_assemble/strategies/*",
    "pen_assemble/triage/*",
    "pen_assemble/utils/*",
    "pen_assemble/verification/*",
    "pen_assemble/data/loader.py",
    "pen_assemble/cli.py",
    "pen_assemble/api.py",
]

[tool.coverage.report]
show_missing = true
skip_empty   = true

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "TID"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pen_assemble"]

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pen_assemble.strategies.*",
    "pen_assemble.triage.*",
    "pen_assemble.verification.*",
    "pen_assemble.utils.*",
    "pen_assemble.data.*",
]
ignore_errors = true
