[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pen-assemble"
version = "0.5.2"
description = "Programmable Enzyme Networks: automated pipeline for IS110-family bridge recombinase design and scoring"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Anees Ahmed", email = "ahmedaneesm@gmail.com" },
]
keywords = [
    "genome editing",
    "bridge recombinase",
    "IS110",
    "protein design",
    "pen-score",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Upstream PEN-STACK extras - pinned to the exact versions used for this release.
# Do NOT relax these bounds without re-running the full pipeline and re-hashing
# the pre-registration file (pen_assemble/data/pre_registration.yaml).
# ---------------------------------------------------------------------------
atlas = [
    # Knowledge graph used for Strategy B ortholog discovery.
    "genome-atlas>=0.7.2,<0.8.0",
    "duckdb>=0.10.0",
]
mech-class = [
    # Mechanism classifier used for the IS110 tier check.
    "mech-class>=0.5.4,<0.6.0",
]
pen-score = [
    # PenScore composite scoring framework.
    "pen-score>=0.1.3,<0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.9",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.25",
    "furo>=2024.1.29",
]

[project.urls]
Homepage      = "https://github.com/ahmedanees-m/pen-assemble"
Documentation = "https://ahmedanees-m.github.io/pen-assemble/"
Repository    = "https://github.com/ahmedanees-m/pen-assemble"
"Bug Tracker" = "https://github.com/ahmedanees-m/pen-assemble/issues"
Changelog     = "https://github.com/ahmedanees-m/pen-assemble/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pen_assemble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["pen_assemble"]
omit = [
    "tests/*",
    # Pipeline-only modules: require heavy VM-only deps (ESM-2, MHCflurry,
    # AlphaFold, mech-class extras). Not importable in CI without those extras.
    "pen_assemble/strategies/*",
    "pen_assemble/triage/*",
    "pen_assemble/utils/*",
    "pen_assemble/verification/*",
    "pen_assemble/data/loader.py",
    "pen_assemble/cli.py",
    "pen_assemble/api.py",
]

[tool.coverage.report]
show_missing = true
skip_empty   = true

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "TID"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pen_assemble"]

[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pen_assemble.strategies.*",
    "pen_assemble.triage.*",
    "pen_assemble.verification.*",
    "pen_assemble.utils.*",
    "pen_assemble.data.*",
]
ignore_errors = true
